<resources>
    <string name="app_name">MassiveProjectMobileZWH</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda_lokasi">Penjemputan Sampah</string>
    <string name="beranda_lokasi_title_address">Atur Lokasi Penjemputan</string>
    <string name="beranda_lokasi_address"> -- Alamat mu akan tampil disini --</string>
    <string name="beranda_lokasi_option">Atur Lokasi Lain</string>
    <string name="beranda_lokasi_title_option">Pilih lokasi lain atau tambah lokasi baru</string>
    <string name="beranda_lokasi_confirmation">Konfirmasi Lokasi</string>
    <string name="beranda_order_title">Detail Penjemputan Sampah</string>
    <string name="beranda_order_title_address">Titik Jemput Sampah</string>
    <string name="beranda_order_address">Mall Pekanbaru, Pintu Masuk ke selatan</string>
    <string name="beranda_order_title_category">Kategori/Jenis Sampah</string>
    <string name="beranda_order_hint_category">--Pilih Kategori--</string>
    <string name="beranda_order_title_note">Catatan Tambahan</string>
    <string name="beranda_order_hint_detail">*Masukkan detail sampah</string>
    <string name="beranda_order_hint_note">Masukkan catatan tambahan</string>
    <string name="beranda_order_confirmation">Jemput Sekarang</string>
    <string name="beranda_proses_username">Budi Putra</string>
    <string name="beranda_proses_ongoing">Sedang dalam perjalanan menuju lokasi</string>
    <string name="beranda_proses_phone">      Telepon</string>
    <string name="beranda_proses_chat">       Chat</string>
    <string name="beranda_proses_confirmation">Selesai</string>
    <string name="beranda_upfoto_confirmation">Unggah Foto</string>
    <string name="beranda_artikel">Artikel</string>
    <string name="beranda_artikel_title">Recycling Made Easier</string>
    <string name="beranda_artikel_content">Welcome to our homepage, a place where we inspire positive change through recycling waste to keep our earth green and sustainainable.</string>
    <string name="beranda_artikel_title2">We invest in the world’s potential</string>
    <string name="beranda_artikel_content2">At GreenSaver, our primary commitment lies in revolutionizing rubbish disposal through the power of technology, innovation, and strategic investment.</string>
    <string name="beranda_artikel_title3">We help people dispose of rubbish</string>
    <string name="beranda_artikel_content3">At GreenSaver, we`re dedicated to transforming the way you handle waste management, making it easier and more convenient for you to dispose of rubbish. Our innovative solutions are designed to simplify the process, ensuring a cleaner and more sustainable environment for all.</string>
    <string name="beranda_chat">Chat</string>
    <string name="beranda_chat_title">Aldio Yohanes</string>
    <string name="beranda_chat_preview">Oke bang ditunggu</string>
    <string name="beranda_chat_date">11/5/23</string>
    <string name="beranda_chat_title2">Rizky Pramudia</string>
    <string name="beranda_chat_preview2">Dah sampe kak ?</string>
    <string name="beranda_obrolan_name">Aldio</string>
    <string name="beranda_obrolan_status">online</string>
    <string name="beranda_obrolan_day">Hari ini</string>
    <string name="beranda_obrolan_content_sender">Hallo, Saya akan mengambil orderan kamu, mohon ditunggu di rumah ya</string>
    <string name="beranda_obrolan_content_receiver">Ok bang, ditunggu</string>
    <string name="beranda_obrolan_typing_status">Sedang mengetik, silahkan tunggu</string>
    <string name="beranda_obrolan_typing">Ketik pesan</string>
    <string name="beranda_dompet">Dompet</string>
    <string name="beranda_dompet_title">Koin Saya</string>
    <string name="beranda_dompet_value">65.000</string>
    <string name="beranda_dompet_title_history">Riwayat Transaksi Koin</string>
    <string name="beranda_dompet_title_reedem">Tukar</string>
    <string name="beranda_list">Hi! Aldio</string>
    <string name="beranda_list_welcome">Selamat datang di Smart Recycling</string>
    <string name="beranda_list_coin_title">Koin Saya</string>
    <string name="beranda_list_coin_value">65.500</string>
    <string name="beranda_list_history">Riwayat</string>
    <string name="beranda_list_pickup">Penjemputan Sampah</string>
    <string name="beranda_list_reedem">Tukar Koin</string>
    <string name="beranda_list_article">Artikel</string>
    <string name="beranda_list_article_more">Lihat Lainya</string>
    <string name="beranda_order_choose_category">--Pilih Kategori --</string>
    <string name="beranda_order_selesai_status">Selesai</string>
    <string name="beranda_order_selesai_detail">Koin telah ditambahkan oleh pengepul</string>
    <string name="beranda_order_selesai_home">Kembali Ke Beranda</string>
    <string name="beranda_order_selesai_history">Lihat Riwayat Transaksi</string>
    <string name="beranda_order_selesai_option">Atau</string>
    <string name="beranda_tukar_id">Nomor Dana</string>
    <string name="beranda_tukar_value">Nominal</string>
    <string name="beranda_tukar_note">Catatan Transaksi</string>
    <string name="beranda_tukar_id_hint">Masukkan ID anda</string>
    <string name="beranda_tukar_value_hint">Masukkan Nominal</string>
    <string name="beranda_tukar_note_hint">Tambahkan catatan</string>
    <string name="beranda_tukar_confirmation">Tukar</string>
    <string name="beranda_tukar">Tukar Koin</string>
    <string name="beranda_tukar_konfrim">Tukar Koin</string>
    <string name="beranda_tukar_konfrim_title">Nomor Tujuan</string>
    <string name="beranda_tukar_konfrim_id_name">Aldio Yohanes</string>
    <string name="beranda_tukar_konfrim_id_number">082112345678</string>
    <string name="beranda_tukar_konfrim_title_value">Nominal</string>
    <string name="beranda_tukar_konfrim_value">Rp.50.000</string>
    <string name="beranda_tukar_konfrim_title_note">Catatan Transaksi</string>
    <string name="beranda_tukar_konfrim_confirmation">Tukar</string>
    <string name="beranda_tukar_selesai_title">Selesai</string>
    <string name="beranda_tukar_selesai_detail">Saldo berhasil ditambahkan</string>
    <string name="beranda_tukar_selesai_confirmation">Lanjutkan</string>
    <string name="chat_list">Chat</string>
    <string name="register_title_fullname">Nama Lengkap</string>
    <string name="register_title_phone">Email</string>
    <string name="register_title_password">Kata Sandi</string>
    <string name="register_title_password_twice">Konfirmasi Kata Sandi</string>
    <string name="register_hint_fullname">Masukkan Nama Lengkap</string>
    <string name="register_hint_phone">Masukkan Nomor Telepon</string>
    <string name="register_hint_password">Masukkan Kata Sandi</string>
    <string name="register_hint_password_twice">Konfirmasi Kata Sandi</string>
    <string name="register_title_agreement">Saya Menyetujui</string>
    <string name="register_agreement">Syarat dan Ketentuannya</string>
    <string name="register_confirmation">Daftar</string>
    <string name="register_option">Atau</string>
    <string name="register_title_to_login">Apakah Anda sudah memiliki akun?</string>
    <string name="register_to_login">Masuk</string>
    <string name="login_title_phone">Email</string>
    <string name="login_title_password">Kata Sandi</string>
    <string name="login_hint_phone">Masukkan Nomor Telepon</string>
    <string name="login_hint_password">Masukkan Kata Sandi</string>
    <string name="login_remember">Ingat Saya</string>
    <string name="login_forgot">Lupa Sandi?</string>
    <string name="login_confirmation">Masuk</string>
    <string name="login_option">Atau</string>
    <string name="login_title_to_register">Apakah Anda sudah memiliki akun?</string>
    <string name="login_to_register">Daftar</string>
    <string name="maps_process_name">Aldio Yohanes</string>
    <string name="maps_process_title_address">Titik Jemput</string>
    <string name="maps_process_address">Mall Pekanbaru, Pintu Masuk</string>
    <string name="order_detail_name">Aldio Yohanes</string>
    <string name="order_detail_title_note">Catatan :</string>
    <string name="order_detail_note">Sampah botol plastik</string>
    <string name="order_detail_title_weight">Estimasi Berat :</string>
    <string name="order_detail_weight">2 Kg</string>
    <string name="order_detail">Detail Order</string>
    <string name="order_detail_confirmation">Diterima</string>
    <string name="order_detail_payment">Bayar</string>
    <string name="order_done">Pembayaran</string>
    <string name="order_done_status">Selesai</string>
    <string name="order_done_status_detail">Saldo anda berhasil dikurangkan untuk membayar</string>
    <string name="order_done_home">Kembali ke Beranda</string>
    <string name="order_history">Pesanan</string>
    <string name="order_history_name">Aldio Yohanes, Blimbing</string>
    <string name="order_history_title_address">Titik Jemput</string>
    <string name="order_history_address">Mall Pekanbaru, Pintu Masuk</string>
    <string name="order_history_note">Catatan : 10 Botol Aqua, Besi Kecil, TV Tabung</string>
    <string name="order_history_weight">Estimasi : 8kg</string>
    <string name="order_history_distance">(500 m)</string>
    <string name="order_history_value">200.000 Coins</string>
    <string name="order_list">Order</string>
    <string name="order_list_history">Riwayat Pesanan</string>
    <string name="order_list_history_value">6</string>
    <string name="profile_help_heading1">Berikut adalah langkah-langkah dalam melakukan proses daur ulang :</string>
    <string name="profile_help_heading2">Alur Penjemputan :</string>
    <string name="profile_help_title_reedem">Alur Penukaran Points :</string>
    <string name="profile_help_reedem">Point dapat ditukarkan saldo e-wallet , voucher pulsa, dll</string>
    <string name="profile_help_step_1">1. Pengguna memasukkan jumlah barang</string>
    <string name="profile_help_step_2">2. Pengguna memilih kategori setiap barang</string>
    <string name="profile_help_step_3">3. Memilih kategori pembayaran</string>
    <string name="profile_help_step_4">4. Menentukan titik lokasi penjemputan</string>
    <string name="profile_help_step_5">5. Menunggu konfirmasi penjemputan</string>
    <string name="profile_help_step_6">6. Proses penjemputan</string>
    <string name="profile_help_step_7">7. Barang diambil</string>
    <string name="profile_help_step_8">8. Pengepul melakukan pembayaran</string>
    <string name="profile_help_step_9">9. Proses selesai</string>
    <string name="profile_edit_username">Username</string>
    <string name="profile_edit_fullname">Nama Lengkap</string>
    <string name="profile_edit_birth">Tempat, Tanggal Lahir</string>
    <string name="profile_edit_email">Email</string>
    <string name="profile_edit_phone">Nomor Telepon</string>
    <string name="profile_edit_gender">Jenis Kelamin</string>
    <string name="profile_edit_address">Alamat Lengkap</string>
    <string name="profile_edit_confirmation">Simpan</string>
    <string name="profile_about_title">Tentang Kami</string>
    <string name="profile_about_content">Selamat datang di Smart Recycling, tempat di mana kami menginspirasi perubahan positif melalui daur ulang sampah untuk menjaga kita bumi yang hijau dan berkelanjutan.</string>
    <string name="profile_about_title_more">Informasi Selengkapnya</string>
    <string name="profile_about_website">https://smartrecycling.co.id</string>
    <string name="profile_about_instagram">smartrecycling.id</string>
    <string name="profile_about_whatsapp">Informasi lanjut</string>
    <string name="wallet_add_value">Nominal</string>
    <string name="wallet_add_note">Catatan Transaksi</string>
    <string name="wallet_add_hint_value">Masukkam Nominal</string>
    <string name="wallet_add_hint_note">Masukkam Nominal</string>
    <string name="wallet_add_confirmation">Lanjutkan</string>
</resources>