<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileHelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_heading1"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/profile_help_heading1"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/profile_help_heading2"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_1"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_2"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_3"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_step_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_4"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_step_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_5"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_step_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_6"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_step_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_7"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_step_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_8"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_step_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_step_9"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_title_reedem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/profile_help_title_reedem"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlur9" />

        <TextView
            android:id="@+id/tv_reedem"
            android:layout_width="331dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="40dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/profile_help_reedem"
            android:textColor="@color/black"
            android:textSize="12sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>