<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profil.ProfilEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_username"
            android:inputType="text"
            android:textSize="14sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_fullname"
            android:inputType="text"
            android:textSize="14sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_birth"
            android:inputType="date"
            android:textSize="14sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_email"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_phone"
            android:inputType="phone"
            android:textSize="14sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_gender"
            android:inputType="text"
            android:textSize="14sp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/profile_edit_address"
            android:inputType="text"
            android:textSize="14sp"
            android:importantForAutofill="no"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_bt"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/profile_edit_confirmation"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        style="@style/ButtonNext"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>