<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileAboutFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/profile_about_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="343dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profile_about_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/profile_about_title_more"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_about" />

    <ImageView
        android:id="@+id/iv_web"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_web"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_more"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profile_about_website"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_web"
        app:layout_constraintStart_toEndOf="@+id/iv_web"
        app:layout_constraintTop_toTopOf="@+id/iv_web" />

    <ImageView
        android:id="@+id/iv_ig"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_instagram"
        app:layout_constraintEnd_toEndOf="@+id/iv_web"
        app:layout_constraintStart_toStartOf="@id/iv_web"
        app:layout_constraintTop_toBottomOf="@+id/iv_web"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_ig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profile_about_instagram"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ig"
        app:layout_constraintStart_toStartOf="@+id/tv_web"
        app:layout_constraintTop_toTopOf="@+id/iv_ig" />

    <ImageView
        android:id="@+id/iv_wa"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_wa"
        app:layout_constraintEnd_toEndOf="@+id/iv_ig"
        app:layout_constraintStart_toStartOf="@+id/iv_ig"
        app:layout_constraintTop_toBottomOf="@+id/iv_ig"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_wa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profile_about_whatsapp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_wa"
        app:layout_constraintStart_toStartOf="@+id/tv_ig"
        app:layout_constraintTop_toTopOf="@+id/iv_wa" />

</androidx.constraintlayout.widget.ConstraintLayout>