<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.WalletAddFragment">

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/wallet_add_value"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/wallet_add_hint_value"
        android:inputType="number"
        android:fontFamily="@font/poppinsregular"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_value"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/wallet_add_note"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_value"
        app:layout_constraintTop_toBottomOf="@id/et_value" />

    <EditText
        android:id="@+id/input_catatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/wallet_add_hint_note"
        android:inputType="text"
        android:fontFamily="@font/poppinsregular"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/et_value"
        app:layout_constraintStart_toStartOf="@+id/et_value"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bt_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_add_confirmation"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/poppinsbold"
        android:textAlignment="center"
        android:backgroundTint="@color/green"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>